@@ -1,3 +1,9 @@
+2002-06-12  Mark Mitchell  <mark@codesourcery.com>
+
+	* qm/test/execution_engine.py (ExecutionEngine._CheckForResponse):
+	Use _UpdateDependentTests.
+	(ExecutionEngine._UpdateDependentTests): New method.
+
 2002-06-09  Zack Weinberg  <zack@codesourcery.com>
 
 	* qm/track: Remove .cvsignore files.
